--- a/app/src/main/res/layout/people_item_view.xml
+++ b/app/src/main/res/layout/people_item_view.xml
@@ -13,8 +13,8 @@
     <ImageView
         android:id="@+id/profile_path_img"
         android:layout_width="200dp"
-        android:layout_height="wrap_content"
-        android:adjustViewBounds="true"
+        android:layout_height="400dp"
+        android:scaleType="centerCrop"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
@@ -28,6 +28,6 @@
         android:background="#55000000"
         android:hint="people name"
         app:layout_constraintBottom_toBottomOf="@id/profile_path_img"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent" />
+        app:layout_constraintEnd_toEndOf="@id/profile_path_img"
+        app:layout_constraintStart_toStartOf="@id/profile_path_img" />
 </android.support.constraint.ConstraintLayout>
